--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       background: #fff;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      width: 300px; /* Masaüstü için ürün kartı genişliği */
+      width: 300px; /* Masaüstü için genişlik */
       padding: 1rem;
       text-align: center;
       transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -169,21 +169,31 @@
       display: none;
       z-index: 2000;
     }
-
+    
     /* Mobil Ekranlar için Responsive Düzen */
     @media (max-width: 768px) {
       #products {
+        padding: 1rem;
         gap: 1rem;
-        flex-direction: column; /* Kartları alt alta dizmek isterseniz */
+        flex-direction: column;
         align-items: center;
       }
       .product {
-        width: 90%; /* Mobilde ürün kartlarını daha dar yapalım */
-        max-width: 350px; /* İsteğe bağlı üst sınır */
+        width: 90%;
+        max-width: 250px; /* Mobilde ürün kartları daha küçük */
+        padding: 0.8rem;
       }
       .product img {
-        max-width: 100%;
+        width: 100%;
         height: auto;
+      }
+      header {
+        font-size: 1.3rem;
+        padding: 0.6rem 1rem;
+      }
+      .button {
+        padding: 0.65rem 1.2rem;
+        font-size: 0.9rem;
       }
     }
   </style>
