--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
     </div>
 
     <!-- Analı Kızlı -->
-    <div class="flip-card" data-name="ANALı KIZLI" data-price="790" data-category="yemek" data-unit="kg">
+    <div class="flip-card" data-name="ANALI KIZLI" data-price="790" data-category="yemek" data-unit="kg">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img src="images/anali_kizli.jpg" alt="ANALı KIZLI">
