--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
   <!-- Ürünler Bölümü (12 Ürün - Yeni ürünler eklendi) -->
   <section id="products">
     <!-- İçli Köfte -->
-    <div class="flip-card" data-name="İÇLİ KÖFTE(DIŞI ETSİZ)" data-price="650" data-category="tuzlu" data-unit="kg">
+    <div class="flip-card" data-name="İÇLİ KÖFTE(DIŞI ETSİZ)" data-price="650" data-category="yemek" data-unit="kg">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img src="images/icli_kofte.jpg" alt="İÇLİ KÖFTE(DIŞI ETSİZ)">
