--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
     </div>
     
     <!-- Saray Sarması -->
-    <div class="flip-card" data-name="SARAY SARMASI" data-price="550" data-category="tatli" data-unit="adet">
+    <div class="flip-card" data-name="SARAY SARMASI" data-price="550" data-category="tatli" data-unit="tepsi">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img src="images/saray_sarmasi.jpg" alt="SARAY SARMASI">
