--- a/index.html
+++ b/index.html
@@ -680,8 +680,8 @@
     <div class="flip-card" data-name="ANALI KIZLI" data-price="790" data-category="yemek" data-unit="kg">
       <div class="flip-card-inner">
         <div class="flip-card-front">
-          <img src="images/anali_kizli.jpg" alt="ANALı KIZLI">
-          <h3>ANALı KIZLI</h3>
+          <img src="images/anali_kizli.jpg" alt="ANALI KIZLI">
+          <h3>ANALI KIZLI</h3>
           <span>Fiyat: 790₺ (1 kg)</span>
           <button onclick="addToCart(event, this)" class="button">Sepete Ekle</button>
         </div>
