--- a/index.html
+++ b/index.html
@@ -803,13 +803,16 @@
       </div>
     </div>
 
-    <!-- 17. HARPUT KÖFTE -->
+     <!-- 17. HARPUT KÖFTE -->
     <div class="flip-card" data-name="HARPUT KÖFTE" data-price="550" data-discount="550" data-category="yemek" data-unit="kg">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img src="images/harput_kofte.jpg" alt="HARPUT KÖFTE">
           <div class="discount-tag">
           <h3>HARPUT KÖFTE</h3>
+          <span>
+            <span class="original-price">550₺ (1 kg)</span><br>
+            <span class="discount-alert">!</span> <span class="discount-price">490₺ (1 kg)</span>
           </span>
           <button onclick="addToCart(event, this)" class="button">Sepete Ekle</button>
         </div>
