--- a/index.html
+++ b/index.html
@@ -803,12 +803,12 @@
       </div>
     </div>
 
-     <!-- 17. HARPUT KÖFTE -->
-    <div class="flip-card" data-name="HARPUT KÖFTE" data-price="550" data-discount="550" data-category="yemek" data-unit="kg">
+    <!-- 17. HARPUT KÖFTE -->
+    <div class="flip-card" data-name="HARPUT KÖFTE" data-price="550" data-discount="490" data-category="yemek" data-unit="kg">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img src="images/harput_kofte.jpg" alt="HARPUT KÖFTE">
-          <div class="discount-tag">
+          <div class="discount-tag">İndirimde!</div>
           <h3>HARPUT KÖFTE</h3>
           <span>
             <span class="original-price">550₺ (1 kg)</span><br>
