--- a/index.html
+++ b/index.html
@@ -803,16 +803,14 @@
       </div>
     </div>
 
-    <!-- 17. HARPUT KÖFTE -->
-    <div class="flip-card" data-name="HARPUT KÖFTE" data-price="550" data-discount="490" data-category="yemek" data-unit="kg">
+    <!-- 17. HARPUT KÖFTE (İNDİRİMSİZ) -->
+    <div class="flip-card" data-name="HARPUT KÖFTE" data-price="550" data-category="yemek" data-unit="kg">
       <div class="flip-card-inner">
         <div class="flip-card-front">
           <img src="images/harput_kofte.jpg" alt="HARPUT KÖFTE">
-          <div class="discount-tag">İndirimde!</div>
           <h3>HARPUT KÖFTE</h3>
-          <span>
-            <span class="original-price">550₺ (1 kg)</span><br>
-            <span class="discount-alert">!</span> <span class="discount-price">490₺ (1 kg)</span>
+          <span class="price-container">
+            550₺ (1 kg)
           </span>
           <button onclick="addToCart(event, this)" class="button">Sepete Ekle</button>
         </div>
